# ROCm-Profiling-Playbook

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
analysis/: __init__.py  kernel_analyzer.py  trace_analyzer.py
configs/: counters-compute.txt  counters-memory.txt
docs/: 01-intro-to-profiling.md  02-rocprof-basics.md  03-hardware-counters.md  04-trace-analysis.md  05-omniperf-guide.md  06-common-bottlenecks.md
examples/: simple_kernel.hip
guides/: getting-started.md  kernel-optimization.md
scripts/: analyze-trace.py  profile-quick.sh
tests/: test_analysis.py
traces/: example_kernels.csv
