[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocm-profiling-playbook"
version = "1.0.0"
description = "ROCm GPU profiling guides and analysis tools"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Sudheer Devu"}
]
keywords = ["rocm", "profiling", "gpu", "amd", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/sudheerdevu/ROCm-Profiling-Playbook"
Repository = "https://github.com/sudheerdevu/ROCm-Profiling-Playbook"

[tool.setuptools.packages.find]
where = ["."]
include = ["analysis*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
